# jodie

./: .gitignore  README.md  pyproject.toml
jodie/: config.py  constants.py
jodie/cli/: __doc__.py  __main__.py  preview.py
jodie/contact/: contact.py
jodie/input/: __init__.py  clipboard.py  signature.py  stdin.py
jodie/parsers/: __init__.py  base.py  extractor.py  parsers.py  pipeline.py
scripts/: release.sh
tests/: __init__.py  conftest.py  test_auto_parse.py
tests/test_parsers/: __init__.py  test_email.py  test_name.py  test_phone.py  test_title.py
