[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jodie"
license = {text = "MIT"}
version = "0.1.0"
description = "Jodie lets you add contacts to Contacts.app on macOS from command line"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "austin", email = "tips@cia.lol"}]
keywords = ["macOS", "Contacts.app", "Contact management", "Contacts", "command line tool", "CLI"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email :: Address Book",
    "Topic :: Utilities",
]
dependencies = [
    "docopt~=0.6.2",
    "nameparser==1.1.3",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/austinogilvie/jodie"
Repository = "https://github.com/austinogilvie/jodie"
Issues = "https://github.com/austinogilvie/jodie/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["jodie*"]

[project.scripts]
jodie = "jodie.cli.__main__:main"
jodie-cli = "jodie.cli.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v"

[tool.coverage.run]
source = ["jodie"]
omit = ["jodie/cli/__main__.py"]
